<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string-array name="array_notes_types">
		<item>Display all</item>
		<item>Simple</item>
		<item>Event</item>
		<item>Urgent</item>
		<item>Reminder</item>
		<item>Work</item>
	</string-array>

	<string name="help">Help</string>
	<string name="hint_password">password</string>
	<string name="app_name">jeNote</string>
	<string name="failed">failed</string>
	<string name="clear_canvas">Clear canvas</string>
	<string name="everything_will_be_clear">All drawing will be cleared!</string>
	<string name="choose_color_saturation_opacity">Choose color/saturation value/opacity/saturation</string>

	<!-- Login screen -->
	<string name="login">Login</string>
	<string name="password">Password</string>
	<!-- Login screen -->


	<!-- Menu screen -->
	<string name="create_note">Create jeNote</string>
	<string name="my_notes">My jeNote</string>
	<!-- Menu screen -->


	<!-- Add note screen -->
	<string name="note_type">Choose jeNote type</string>

	<!-- Add note screen -->

	<string name="success">success</string>
	<string name="color_changed">Color has been changed</string>
	<string name="choose_custom_color">Choose custom color</string>
	<string name="clear_drawing">Drawing has been cleaned</string>
	<string name="erase_mode_is_active">Erase mode is on</string>
	<string name="thick_brush">Thick brush size</string>
	<string name="medium_brush_size">Medium brush size</string>
	<string name="thin_brush_size">Thin brush size</string>
	<string name="draw_rectangle">Draw rectangle</string>
	<string name="draw_circle">Draw circle</string>
	<string name="draw_line">Draw line</string>
	<string name="draw_triangle">Draw triangle</string>
	<string name="free_drawing">Free drawing</string>
	<string name="undo">Undo</string>
	<string name="redo">Redo</string>
	<string name="resetPassword"><u>Forgotten password</u></string>
	<string name="changePassword">Change password</string>
	<string name="changeNotesOrder">Notes order</string>
	<string name="notifications">Notifications</string>
	<string name="settings">Settings</string>
	<string name="newPass">New password</string>
	<string name="oldPass">Old password</string>
	<string name="newEmail">New email</string>
	<string name="note_has_been_created">jeNote has been created successfully</string>
	<string name="good_bye">Good bye</string>
	<string name="drawing_has_been_saved">Drawing has been saved</string>
	<string name="location_has_been_saved">Posiotion has been saved</string>
	<string name="photo_saved">Photo has been successfully saved</string>
	<string name="photo_saving_failed">Failed to save photo</string>
	<string name="cannot_save_drawing">Cannot save drawing</string>
	<string name="select_date">Select date</string>
	<string name="file_cannot_be_created">File cannot be created</string>
	<string name="sd_card_is_busy">File cannot be created, probably SDCard is not available</string>
	<string name="attached_drawing">Attached drawing</string>
	<string name="attached_photo">Attached photo</string>
	<string name="drawing_is_locked">Drawing is locked</string>
	<string name="there_is_no_location">There is no pinned location</string>
	<string name="problem_obtaining_address">Problem obtain address</string>
	<string name="unknown_address">Unknown address</string>
	<string name="save">Save</string>
	<string name="drawing_has_not_been_saved">Drawing has not been saved.</string>
	<string name="save_drawing">Do you want to save Drawing?</string>
	<string name="location_has_not_been_saved">Location has not been saved</string>
	<string name="do_you_want_to_save_location">Do you want to save location?</string>
	<string name="drag_me">Drag me</string>
	<string name="drawing_settings">Drawing settings</string>
	<string name="brush_color">Brush colors</string>
	<string name="shapes">Shapes</string>
	<string name="drag_me_to_any_position">Drag marker to any position you like</string>
	<string name="note_detail">jeNote detail</string>
	<string name="there_is_no_drawing">There is no pinned drawing</string>
	<string name="there_is_no_photo">There is no pinned photo</string>
	<string name="please_wait">Please wait....</string>
	<string name="completed">Completed</string>
	<string name="add_note">Add jeNote</string>
	<string name="filter">Filter</string>
	<string name="logout">Logout</string>
	<string name="simple_note_type">Simple</string>
	<string name="event_note_type">Event</string>
	<string name="urgent_note_type">Urgent</string>
	<string name="reminder_note_type">Reminder</string>
	<string name="work_note_type">Work</string>
	<string name="do_you_want_to_delete_item">Do you want to delete jeNote?</string>
	<string name="note_will_be_deleted">jeNote will be deleted completely.</string>
	<string name="cancel">Cancel</string>
	<string name="do_you_want_to_complete_item">Do you want to complete jeNotes?</string>
	<string name="completeing_item">Completeing jeNote</string>
	<string name="attached_position">Atached position</string>
	<string name="type_of_note">Type of jeNote</string>
	<string name="do_you_really_want_logout">Do you really want logout?</string>
	<string name="do_you_really_want_clear_canvas">Do you really want clear canvas?</string>
	<string name="do_you_want_to_be_asked_password">Fill password automatically?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="password_filled_automatically">Password filled automatically</string>
	<string name="pick_color">Pick color from palette</string>
	<string name="opacity_level">Opacity level</string>
	<string name="saturation_level">Saturation level</string>
	<string name="you_have_attachments">You have %s attachemnt(s)</string>
	<string name="you_are_here">You are here</string>
	<string name="by_word">By word</string>
	<string name="by_type">By type</string>
	<string name="change_notes_order">jeNotes order</string>
	<string name="is_last_item">Item is last</string>
	<string name="is_first_item">Item is first</string>
	<string name="this_type_will_be_displayed_first">This jeNote will be displayed first</string>
	<string name="this_type_will_be_displayed_second">This jeNote will be displayed second</string>
	<string name="this_type_will_be_displayed_third">This jeNote will be displayed third</string>
	<string name="this_type_will_be_displayed_fourth">This jeNote will be displayed fourth</string>
	<string name="this_type_will_be_displayed_fifth">This jeNote will be displayed fifth</string>
	<string name="pinned_position">Pinned position</string>
	<string name="position_has_been_changed">Position has been changed</string>
	<string name="map_type_terrain">Map type - terrain</string>
	<string name="map_type_satellite">Map type - satellite</string>
	<string name="map_type_normal">Map type - normal</string>
	<string name="route_type_walking">Walking route</string>
	<string name="route_type_car">Car route</string>
	<string name="route_type_bike">Bike route</string>
	<string name="alarm_not_set">Alarm not set</string>
	<string name="displays_created_time">Date and time, when note has been created</string>
	<string name="do_you_want_to_set_alarm">Do you want to set alarm?</string>
	<string name="set_alarm">Set alarm</string>
	<string name="vibrate">Vibrate on notification</string>
	<string name="display_message">Display message in notification bar</string>
	<string name="jenote_reminder">jeNote reminder</string>
	<string name="jenote_hasnot_been_saved">jeNote has not been saved</string>
	<string name="do_you_want_to_save_jenote">Do you want to save jeNote?</string>
	<string name="change_email">Change email</string>
	<string name="password_has_been_changed">Password has been changed</string>
	<string name="old_password_is_wrong">Old password is wrong</string>
	<string name="field_cannot_be_empty">Field cannot be empty</string>
	<string name="email_has_been_changed">Email has been changed</string>
	<string name="search">Search</string>
	<string name="filter_show_not_complete">Display not completed jeNotes</string>
	<string name="filter_show_complete">Display completed jeNotes</string>
	<string name="filter_show_all">Display all jeNotes</string>
	<string name="sort_by_dates_old_first">Sort by date: old jeNotes first</string>
	<string name="sort_by_dates_new_first">Sort by date: new jeNotes first</string>
	<string name="date_in_past_alarm_not_set">Date in past, alarm not set</string>
	<string name="pass_email_cannot_be_empty">"Password/Email cannot be empty"</string>
	<string name="pass_email_has_been_saved">Password and/or Email has been saved</string>
	<string name="start_addr">Start address : </string>
	<string name="end_addr">End address : </string>
	<string name="wrong_pass">Wrong password</string>
	<string name="first_time">Hello, it is seems like you are first time here, provide your password (email is necessary for recovering passowrd)</string>
	<!-- STUBS -->

</resources>