<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<LinearLayout
		android:id="@+id/parentPanel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:background="@drawable/dialog_bg"
		android:clickable="false"
		android:orientation="vertical"
		android:visibility="visible" >

		<LinearLayout
			android:id="@+id/topPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#22000000"
			android:orientation="vertical" >

			<RelativeLayout
				android:id="@+id/title_template"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_marginEnd="16dip"
				android:layout_marginStart="16dip" >

				<ImageView
					android:id="@+id/icon"
					android:layout_width="32dp"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_margin="8dip"
					android:scaleType="centerInside"
					android:src="@drawable/priority" />

				<TextView
					android:id="@+id/alertTitle"
					style="@style/DialogWindowTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:layout_marginLeft="8dip"
					android:ellipsize="end"
					android:gravity="center"
					android:singleLine="true"
					android:text="@string/type_of_note" />
			</RelativeLayout>

			<View
				android:id="@+id/titleDivider"
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/divider_color"
				android:visibility="visible" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/contentPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<RadioGroup
				android:id="@+id/rgTypeOfNote"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/transparent_inside_and_white_border" >

				<RadioButton
					android:id="@+id/rbSimple"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:tag="Simple"
					android:text="@string/simple_note_type"
					android:textColor="@android:color/white" />

				<RadioButton
					android:id="@+id/rbEvent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="Event"
					android:text="@string/event_note_type"
					android:textColor="@android:color/white" />

				<RadioButton
					android:id="@+id/rbUrgent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="Urgent"
					android:text="@string/urgent_note_type"
					android:textColor="@android:color/white" />

				<RadioButton
					android:id="@+id/rbReminder"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="Reminder"
					android:text="@string/reminder_note_type"
					android:textColor="@android:color/white" />

				<RadioButton
					android:id="@+id/rbWork"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:tag="Work"
					android:text="@string/work_note_type"
					android:textColor="@android:color/white" />
			</RadioGroup>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/transparent_inside_and_white_border" >

				<ImageView
					android:id="@+id/ivNoteType"
					android:layout_width="80dp"
					android:layout_height="80dp"
					android:layout_centerInParent="true"
					android:background="@drawable/simple" />
			</RelativeLayout>
		</LinearLayout>

		<FrameLayout
			android:id="@+id/customPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" >
		</FrameLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/buttonOk"
				style="@style/dialog_btn"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="5dp"
				android:text="@android:string/ok" />

			<Button
				android:id="@+id/buttonCancel"
				style="@style/dialog_btn"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="10dp"
				android:text="@string/cancel" />
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>