<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg"
	tools:context="${packageName}.${activityClass}" >

	<EditText
		android:id="@+id/etPassword"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:layout_margin="10dp"
		android:background="@drawable/transparent_inside_and_white_border"
		android:ems="10"
		android:hint="@string/hint_password"
		android:inputType="textPassword"
		android:padding="3dp"
		android:textColor="@android:color/white" >

	</EditText>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/etPassword"
		android:layout_alignLeft="@+id/etPassword"
		android:layout_alignRight="@+id/etPassword"
		android:text="@string/password"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@android:color/white" />
	
	<TextView
		android:id="@+id/twResetPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/etPassword"
		android:textStyle="italic"
		android:layout_alignRight="@+id/etPassword"
		android:text="@string/resetPassword"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@android:color/white" />

</RelativeLayout>