<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" >

	<LinearLayout
		android:id="@+id/parentPanel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:background="@drawable/dialog_bg"
		android:clickable="false"
		android:orientation="vertical"
		android:visibility="visible" >

		<LinearLayout
			android:id="@+id/topPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#22000000"
			android:orientation="vertical" >

			<RelativeLayout
				android:id="@+id/title_template"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:layout_marginEnd="16dip"
				android:layout_marginStart="16dip" >

				<ImageView
					android:id="@+id/icon"
					android:layout_width="32dp"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_margin="8dip"
					android:scaleType="centerInside"
					android:src="@drawable/settings" />

				<TextView
					android:id="@+id/alertTitle"
					style="@style/DialogWindowTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:layout_marginLeft="8dip"
					android:ellipsize="end"
					android:gravity="center"
					android:singleLine="true"
					android:text="@string/changePassword" />
			</RelativeLayout>

			<View
				android:id="@+id/titleDivider"
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/divider_color"
				android:visibility="visible" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/contentPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal" >

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="5dp"
				android:background="@drawable/transparent_inside_and_white_border" >

				<TextView
					android:id="@+id/twOldPass"
					style="@style/DialogWindowTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"
					android:layout_marginLeft="8dip"
					android:ellipsize="end"
					android:singleLine="true"
					android:text="@string/oldPass" />

				<EditText
					android:id="@+id/etOldPassword"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/twOldPass"
					android:layout_margin="4dp"
					android:background="@drawable/transparent_inside_and_white_border"
					android:inputType="textPassword"
					android:maxLines="1"
					android:padding="5dp"
					android:textColor="@android:color/white" >
				</EditText>

				<TextView
					android:id="@+id/twNewPass"
					style="@style/DialogWindowTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/etOldPassword"
					android:layout_marginLeft="8dip"
					android:ellipsize="end"
					android:singleLine="true"
					android:text="@string/newPass" />

				<EditText
					android:id="@+id/etNewPassword"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/twNewPass"
					android:layout_margin="4dp"
					android:background="@drawable/transparent_inside_and_white_border"
					android:inputType="textPassword"
					android:maxLines="1"
					android:padding="5dp"
					android:textColor="@android:color/white" />

				<TextView
					android:id="@+id/twEmail"
					style="@style/DialogWindowTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/etNewPassword"
					android:layout_marginLeft="8dip"
					android:ellipsize="end"
					android:singleLine="true"
					android:text="@string/newEmail" />

				<EditText
					android:id="@+id/etNewEmail"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_alignParentRight="true"
					android:layout_below="@+id/twEmail"
					android:layout_margin="4dp"
					android:background="@drawable/transparent_inside_and_white_border"
					android:inputType="textEmailAddress"
					android:maxLines="1"
					android:padding="5dp"
					android:textColor="@android:color/white" />
			</RelativeLayout>
		</LinearLayout>

		<FrameLayout
			android:id="@+id/customPanel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" >
		</FrameLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/buttonOk"
				style="@style/dialog_btn"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="5dp"
				android:text="@android:string/ok" />

			<Button
				android:id="@+id/buttonCancel"
				style="@style/dialog_btn"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="10dp"
				android:text="@string/cancel" />
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>