<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ssss"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/dialog_bg" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/pick_color"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="italic|bold" />
		</LinearLayout>

		<com.ik.ggnote.colpicker.ColorPicker
			android:id="@+id/picker"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/btn_press" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:orientation="horizontal" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:text="@string/opacity_level"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="italic|bold" />

			<TextView
				android:id="@+id/twOpacityBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:text=" 0%"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="horizontal" >

			<com.ik.ggnote.colpicker.OpacityBar
				android:id="@+id/opacitybar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:orientation="horizontal" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:textColor="@android:color/white"
				android:text="@string/saturation_level"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic|bold" />

			<TextView
				android:id="@+id/twSaturationBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:text="100%"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
		</LinearLayout> 

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="horizontal" >

			<com.ik.ggnote.colpicker.SaturationBar
				android:id="@+id/saturationbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:orientation="horizontal"
			android:weightSum="2" >

			<Button
				android:id="@+id/buttonOk"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="1"
				android:background="@drawable/btn_selector"
				android:orientation="horizontal"
				android:text="@android:string/ok" >
			</Button>

			<Button
				android:id="@+id/buttonCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="1"
				android:background="@drawable/btn_selector"
				android:orientation="horizontal"
				android:text="@string/cancel" >
			</Button>
		</LinearLayout>
	</LinearLayout>

</ScrollView>