<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ll"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg" >

	<LinearLayout
		android:id="@+id/llRoot"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context="${packageName}.${activityClass}" >

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="70dp"
			android:layout_margin="5dp"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="vertical" >

			<ImageView
				android:id="@+id/image"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_alignParentLeft="true"
				android:layout_centerVertical="true"
				android:layout_marginLeft="5dp"
				android:background="@drawable/autofill" />

			<TextView
				android:id="@+id/text1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_gravity="center_vertical"
				android:layout_toLeftOf="@+id/cbVibrate"
				android:layout_toRightOf="@+id/image"
				android:gravity="center_horizontal"
				android:lines="1"
				android:maxLines="1"
				android:singleLine="true"
				android:text="@string/do_you_want_to_be_asked_password"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@android:color/white"
				android:textStyle="bold" />

			<CheckBox
				android:id="@+id/cbAskPassword"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:layout_alignBaseline="@+id/text1"
				android:layout_alignParentRight="true"
				android:button="@drawable/checkbox_selector" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:background="@drawable/transparent_inside_and_white_border"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/twOldPass"
				style="@style/DialogWindowTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_marginLeft="8dip"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="@string/oldPass" />

			<EditText
				android:id="@+id/etOldPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/twOldPass"
				android:layout_margin="4dp"
				android:background="@drawable/transparent_inside_and_white_border"
				android:inputType="textPassword"
				android:maxLines="1"
				android:padding="5dp"
				android:textColor="@android:color/white" >
			</EditText>

			<TextView
				android:id="@+id/twNewPass"
				style="@style/DialogWindowTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/etOldPassword"
				android:layout_marginLeft="8dip"
				android:ellipsize="end"
				android:singleLine="true"
				android:text="@string/newPass" />

			<EditText
				android:id="@+id/etNewPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/twNewPass"
				android:layout_margin="4dp"
				android:background="@drawable/transparent_inside_and_white_border"
				android:inputType="textPassword"
				android:maxLines="1"
				android:padding="5dp"
				android:textColor="@android:color/white" />
		</RelativeLayout>
	</LinearLayout>

</LinearLayout>