<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/slidemenu_root_scroll_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/slide_menu_background" >

	<LinearLayout
		android:id="@+id/rootLL"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >

		<RelativeLayout
			android:id="@+id/notes"
			android:background="@color/btn_unpress_color"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/imageViewLeftArrowMenu22"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:layout_margin="5dp"
				android:contentDescription="@null"
				android:padding="5dp"
				android:src="@drawable/simple" />

			<TextView
				android:id="@+id/twNotes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/imageViewLeftArrowMenu22"
				android:padding="20dp"
				android:text="@string/my_notes"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />

			<TextView
				android:id="@+id/twAmoutNotes"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:background="@drawable/transparent_inside_and_white_round_border"
				android:clipChildren="false"
				android:text="sdasd"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:gravity="center"
				android:padding="2dp"
				android:layout_margin="2dp"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />

			<View
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:background="@color/slide_menu_divider_color" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/settings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/imageViewLeftArrowMeasddasnu"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:layout_margin="5dp"
				android:contentDescription="@null"
				android:padding="5dp"
				android:src="@drawable/settings" />

			<TextView
				android:id="@+id/twSettings"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/imageViewLeftArrowMeasddasnu"
				android:padding="20dp"
				android:text="@string/settings"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />

			<View
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:background="@color/slide_menu_divider_color" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/globalSearch"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/ivGlobalSearch"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:layout_margin="5dp"
				android:contentDescription="@null"
				android:padding="5dp"
				android:src="@drawable/search" />

			<TextView
				android:id="@+id/twGlobalSearch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/ivGlobalSearch"
				android:padding="20dp"
				android:text="@string/search"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />

			<View
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:background="@color/slide_menu_divider_color" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/logout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/imageVaaaiewLeftArrowMenu"
				android:layout_width="50dip"
				android:layout_height="50dip"
				android:layout_margin="5dp"
				android:contentDescription="@null"
				android:padding="5dp"
				android:src="@drawable/logout" />

			<TextView
				android:id="@+id/teaxstViaew1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"
				android:layout_toRightOf="@+id/imageVaaaiewLeftArrowMenu"
				android:padding="20dp"
				android:text="@string/logout"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />

			<View
				android:layout_width="fill_parent"
				android:layout_height="2dp"
				android:layout_alignParentBottom="true"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:background="@color/slide_menu_divider_color" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="1000dp" >

		</RelativeLayout>
	</LinearLayout>

</ScrollView>